edit-playlist; also fix the overflow-x/y visible vs scroll using wrapper div

--- a/src/components/soul-sifter/playlist-list-item.css
+++ b/src/components/soul-sifter/playlist-list-item.css
@@ -24,3 +24,14 @@ paper-shadow {
 #item core-icon.smart {
   display: inline-block;
 }
+
+#item paper-menu-button {
+  display: none;
+}
+#item:hover paper-menu-button {
+  display: inline-block;
+}
+#item paper-menu-button paper-icon-button {
+  margin-top: 4px;
+  padding: 0;
+}
