--- a/src/components/soul-sifter/playlist-list.css
+++ b/src/components/soul-sifter/playlist-list.css
@@ -1,5 +1,10 @@
 :host {
-  overflow: scroll;
+  overflow-x: visible;
+}
+
+
+#wrapp {
+  overflow-y: scroll;
 }
 
 
